// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable border 1`] = `<div class="ghb-tabbar ghb-tabbar--fixed"></div>`;

exports[`placeholder prop 1`] = `
<div class="ghb-tabbar__placeholder" style="height: 50px;">
  <div class="ghb-hairline--top-bottom ghb-tabbar ghb-tabbar--fixed"></div>
</div>
`;

exports[`route mode 1`] = `
<div class="ghb-hairline--top-bottom ghb-tabbar ghb-tabbar--fixed">
  <div class="ghb-tabbar-item ghb-tabbar-item--active">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="ghb-tabbar-item">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="ghb-tabbar-item">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="ghb-tabbar-item">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`route mode 2`] = `
<div class="ghb-hairline--top-bottom ghb-tabbar ghb-tabbar--fixed">
  <div class="ghb-tabbar-item">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="ghb-tabbar-item ghb-tabbar-item--active">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="ghb-tabbar-item">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="ghb-tabbar-item">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`route mode 3`] = `
<div class="ghb-hairline--top-bottom ghb-tabbar ghb-tabbar--fixed">
  <div class="ghb-tabbar-item">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="ghb-tabbar-item">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="ghb-tabbar-item ghb-tabbar-item--active">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="ghb-tabbar-item">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`route mode match by name 1`] = `
<div class="ghb-hairline--top-bottom ghb-tabbar ghb-tabbar--fixed">
  <div class="ghb-tabbar-item ghb-tabbar-item--active">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="ghb-tabbar-item">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`route mode match by name 2`] = `
<div class="ghb-hairline--top-bottom ghb-tabbar ghb-tabbar--fixed">
  <div class="ghb-tabbar-item">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="ghb-tabbar-item ghb-tabbar-item--active">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`watch tabbar value 1`] = `
<div class="ghb-hairline--top-bottom ghb-tabbar ghb-tabbar--fixed">
  <div class="ghb-tabbar-item">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">Tab</div>
  </div>
  <div class="ghb-tabbar-item ghb-tabbar-item--active">
    <div class="ghb-tabbar-item__icon">
      <!---->
    </div>
    <div class="ghb-tabbar-item__text">Tab</div>
  </div>
</div>
`;
